# waf

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: rule-submission.yml
.github/workflows/: build.yml  community-rules.yml  lint.yml
benchmarks/: README.md  benchmark_helpers.rs
config/: prometheus.yml  waf.yaml
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  COMPARISON.md  DEPLOYMENT.md  FAQ.md  PRODUCTION_CHECKLIST.md  QUICKSTART.md  ROADMAP.md  RULES.md  TROUBLESHOOTING.md
docs/community/: RULES.md
grafana/dashboards/: dashboard.yml  waf-overview.json
grafana/datasources/: datasource.yml
helm/waf/: Chart.yaml  values.yaml
helm/waf/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
rules/: bot-rules.yaml  owasp-top10.yaml  rate-limits.yaml
rules/community/: log4j-cve-2021-44228.yaml
scripts/: install.sh
terraform/aws/: main.tf
terraform/gcp/: main.tf
tests/: integration_tests.rs  stress_test.rs
waf-admin/: Cargo.toml
waf-admin/src/: api.rs  main.rs  state.rs
waf-bot-detector/: Cargo.toml
waf-bot-detector/src/: challenge.rs  detector.rs  fingerprint.rs  lib.rs  reputation.rs  tls_fingerprint.rs
waf-common/: Cargo.toml
waf-common/src/: config.rs  error.rs  lib.rs  statistical.rs  threat_feeds.rs  types.rs
waf-core/: Cargo.toml
waf-core/src/: main.rs  metrics.rs  pipeline.rs  server.rs  upstream.rs
waf-dashboard/: index.html  package.json  vite.config.ts
waf-dashboard/src/: App.tsx  index.css
waf-dashboard/src/pages/: Logs.tsx  Overview.tsx  Rules.tsx
waf-engine/: Cargo.toml
waf-engine/src/: community_rules.rs  context.rs  lib.rs  loader.rs  matcher.rs  scoring.rs
waf-engine/src/detectors/: command_injection.rs  csrf.rs  ldap_injection.rs  lfi.rs  mod.rs  path_traversal.rs  rfi.rs  sqli.rs  xss.rs  xxe.rs
waf-rate-limiter/: Cargo.toml
waf-rate-limiter/src/: leaky_bucket.rs  lib.rs  limiter.rs  redis_backend.rs  sliding_window.rs  token_bucket.rs
