[workspace]
resolver = "2"
members = [
    "waf-common",
    "waf-engine",
    "waf-rate-limiter",
    "waf-bot-detector",
    "waf-core",
    "waf-admin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["WAF Contributors"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = "0.7"
hyper = { version = "1.2", features = ["full"] }
http = "1.1"
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Regex
regex = "1.10"
fancy-regex = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for rule IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Metrics
prometheus = "0.13"
metrics = "0.21"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Config
config = "0.14"

# HTTP client for upstream
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"