[package]
name = "waf-admin"
version.workspace = true
edition.workspace = true

[dependencies]
waf-common = { path = "../waf-common" }
waf-engine = { path = "../waf-engine" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "waf-admin"
path = "src/main.rs"