[package]
name = "waf-bot-detector"
version.workspace = true
edition.workspace = true

[dependencies]
waf-common = { path = "../waf-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
md5 = "0.8"

[dev-dependencies]
tokio-test = "0.4"