[package]
name = "waf-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
http = "1.1"
regex = "1.10"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["sync"] }
parking_lot = "0.12"