[package]
name = "waf-rate-limiter"
version.workspace = true
edition.workspace = true

[dependencies]
waf-common = { path = "../waf-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
parking_lot = "0.12"
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"